# mesi-search

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py  shell.nix  tox.ini
docs/: Makefile  conf.py  index.rst
etc/dev/: .env.bash  .env.fish
requirements/: base.txt  dev.txt  prod.txt
src/: .env  candig.py  config.py
src/mesi_search/: __init__.py  candig.py  main.py  settings.py  skeleton.py  swagger.py  utils.py
src/mesi_search/resources/: discovery.yaml
src/mesi_search/templates/: home.html
tests/: conftest.py  test_candig_functions.py  test_skeleton.py  test_test.py  test_utils_functions.py
